--- a/src/Product.css
+++ b/src/Product.css
@@ -1,9 +1,6 @@
 .Product{
-    border: 2px solid black;
-    border-radius: 10px;
     display: flex;
-    flex-direction: column;
-        /* justify-content: center; */
-    align-items: center;
-    padding: auto;
+    /* flex-direction: row;\ */
+    flex-wrap: wrap;
+    justify-content: center;
 }
