--- a/src/card.css
+++ b/src/card.css
@@ -1,10 +1,9 @@
 .Card {
-    height: 200px;
+    height: 236px;
     width: 160px;
     border: 1px solid black;
     border-radius: 20px;
     margin: 10px;
-    /* justify-content: center; */
-    /* align-items: center; */
     justify-items: center;
+    background-color: rgb(72, 72, 255);
 }
